--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
     "nodemailer": "^7.0.10",
     "stripe": "^19.1.0",
     "uuid": "^13.0.0",
-    "validator": "^13.15.20"
+    "validator": "^13.15.20",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
