--- a/backend/package.json
+++ b/backend/package.json
@@ -18,19 +18,20 @@
   "dependencies": {
     "@solana/spl-token": "^0.4.14",
     "@solana/web3.js": "^1.98.4",
+    "axios": "^1.13.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.0",
+    "express-validator": "^7.3.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3",
     "nodemailer": "^7.0.10",
     "stripe": "^19.1.0",
     "uuid": "^13.0.0",
-    "validator": "^13.15.20",
-    "express-validator": "^7.0.1"
+    "validator": "^13.15.20"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
