--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -24,6 +24,7 @@ jobs:
         working-directory: ./frontend
         run: |
           npm install --legacy-peer-deps
+          npm install ajv@^8.0.0 --legacy-peer-deps
           npm run build
         env:
           REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
