--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -38,8 +38,8 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           script: |
-            mkdir -p httpdocs/api
-            mkdir -p httpdocs/frontend
+            mkdir -p /var/www/vhosts/r1coin.com/httpdocs/api
+            mkdir -p /var/www/vhosts/r1coin.com/httpdocs/frontend
 
       - name: 📂 Deploy Backend
         uses: wlixcc/SFTP-Deploy-Action@v1.2.4
@@ -49,7 +49,7 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           port: 22
           local_path: './backend/'
-          remote_path: './httpdocs/api'
+          remote_path: '/var/www/vhosts/r1coin.com/httpdocs/api'
           sftp_only: true
 
       - name: 📂 Deploy Frontend
@@ -60,18 +60,19 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           port: 22
           local_path: './frontend/build/'
-          remote_path: './httpdocs'
+          remote_path: '/var/www/vhosts/r1coin.com/httpdocs'
           sftp_only: true
           delete_remote_files: true
 
-      - name: 🔄 Restart Backend
+      - name: 🔄 Install Dependencies & Restart
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           script: |
-            cd httpdocs/api
-            npm install --production
-            pm2 restart cdx-backend || pm2 start server.js --name cdx-backend
+            cd /var/www/vhosts/r1coin.com/httpdocs/api && npm install --production
+            npm install -g pm2
+            pm2 restart cdx-backend || pm2 start /var/www/vhosts/r1coin.com/httpdocs/api/server.js --name cdx-backend
             pm2 save
+            echo "Deployment complete!"
