--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -38,8 +38,8 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           script: |
-            mkdir -p /var/www/vhosts/r1coin.com/httpdocs/api
-            mkdir -p /var/www/vhosts/r1coin.com/httpdocs/frontend
+            mkdir -p /var/www/vhosts/r1coin.com/cdx.r1coin.com/api
+            mkdir -p /var/www/vhosts/r1coin.com/cdx.r1coin.com/frontend
 
       - name: 📂 Deploy Backend
         uses: wlixcc/SFTP-Deploy-Action@v1.2.4
