--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -48,7 +48,7 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           port: 22
-          local_path: './backend/'
+          local_path: './'
           remote_path: '/var/www/vhosts/r1coin.com/cdx.r1coin.com/api'
           sftp_only: true
 
